<?xml version="1.0"?>
<package>
  <name>linefollower_msgs</name>
  <version>0.0.1</version>
  <description>a special message for a linefollower sensor</description>

  <maintainer email="majorx234@googlemail.com">majorx234</maintainer>

  <license>GPLv2</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
   <!-- The export tag contains other, unspecified, tags -->
  <export>
    <architecture_independent/>
  </export>
</package>